@@ -1,13 +1,0 @@
-.TH SPAWNFCGI 1 2003-12-21
-.SH NAME
-spawn-fcgi \- spawning FastCGI processes
-.SH SYNOPSIS
-spawn-fcgi -f <fastcgi-binary> [-p <port> | -s <socket>] [-C <num-of-php-procs>] [-c <chroot-dir>] [-u <username>] [-g <groupname>]
-spawn-fcgi -v
-spawn-fcgi -h
-.SH DESCRIPTION
-spawn-fcgi is used to spawn remote FastCGI processes.
-.SH SEE ALSO
-lighttpd(1)
-.SH AUTHOR
-jan@kneschke.de
