@@ -8,6 +8,7 @@ NEWS
   * New lighttpd man page (moved it to section 8) (fixes #1875)
   * Create rrd file for empty rrdfile in mod_rrdtool (#1788)
   * Fix workaround for incorrect path info/scriptname if fastcgi prefix is "/" (fixes #729)
+  * Finally removed spawn-fcgi
 
 - 1.4.22 - 2009-03-07
   * Fix wrong lua type for CACHE_MISS/CACHE_HIT in mod_cml (fixes #533)
